# avmlib

./: .gitignore  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: benchmarks.rs
src-tauri/src/: benchmarks.rs  constants.rs  dot_product.rs  lib.rs  main.rs  sine.rs  spiral.rs  utils.rs
src/lib/: Greet.svelte
